--- a/app/src/main/res/layout/activity_reporte.xml
+++ b/app/src/main/res/layout/activity_reporte.xml
@@ -26,6 +26,7 @@
         android:id="@+id/btnMostrar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:onClick="resultado"
         android:text="@string/mostrar" />
 
     <Button
