--- a/app/src/main/res/layout/activity_reporte3.xml
+++ b/app/src/main/res/layout/activity_reporte3.xml
@@ -19,6 +19,7 @@
         android:typeface="serif" />
 
     <TableLayout
+        android:id="@+id/tabla"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:stretchColumns="*">
