--- a/app/src/main/res/layout/activity_reporte.xml
+++ b/app/src/main/res/layout/activity_reporte.xml
@@ -33,5 +33,6 @@
         android:id="@+id/btnLimpiar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:onClick="limpiar"
         android:text="@string/limpiar" />
 </LinearLayout>
